--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -6,4 +6,5 @@
 {{form.as_p}}
 <input type='submit' value='Se connecter'>
 </form>
+<p>Pas encore menbres ? <a href="{%url 'authentication:signup'%}">S'inscrire</a>
 {% endblock content %}
