--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-<p>vous etes connectes </p>
+<h2>Photos</h2>
+{% for photo in photos%}
+<img src="{{photo.image.url}}">
+<p>{{photo.caption}}</p>
+{%endfor%}
 {% endblock content %}
