--- a/blog/templates/blog/blog_add.html
+++ b/blog/templates/blog/blog_add.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h2>Votre Post</h2>
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
     {{blog_form.as_p}}
     {{photo_form.as_p}}
     {% csrf_token %}
