--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
 <h2>Photos</h2>
-<div>
+<div class="grid-container">
 {% for photo in photos%}
+<div class="POST">
 <img src="{{photo.image.url}}">
 <p>{{photo.caption}}</p>
+</div>
 {%endfor%}
 </div>
 <div>
@@ -12,7 +14,7 @@
     <div class="grid-container">
         {% for blog in blogs %}
         <div class="POST">
-            <a href="{%url 'view_blog' blog.id%}">
+            <a href="{%url 'blog:view_blog' blog.id%}">
                 <h4>Billet : {{blog.title}}</h4>
                 <img src="{{blog.photo.image.url}}">
             </a>
@@ -20,5 +22,5 @@
         </div>
 
         {% endfor %}
-    
+    </div>
 {% endblock content %}
