--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,12 @@
                     <img class="avatar" src="{% static 'images/default_profile.png'%}">
                 {% endif %}
                 <p><a href="{% url 'blog:home' %}">Accueil</a></p>
+                {% if perms.blog.add_photo %}
                 <p><a href="{% url 'blog:photo_upload' %}">Téléverser une photo</a></p>
+                {% endif %}
+                {% if perms.blog.add_blog %}
                 <p><a href="{%url 'blog:blog_add'%}">Publier un post</a>
+                {% endif %}
                 <p><a href="{% url 'authentication:profil_photo' %}">Changer la photo de profil</a></p>
                 <p><a href="{% url 'authentication:password_change' %}">Changer le mot de passe</a></p>
                 <p><a href="{% url 'authentication:logout' %}">Se déconnecter</a></p>
