--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
                 {% if perms.blog.add_photo %}
                 <p><a href="{% url 'blog:photo_upload' %}">Téléverser une photo</a></p>
                 {% endif %}
+                <p><a href="{%url 'follow_users'%}">Suivre des utilisateurs</a></p>
                 {% if perms.blog.add_blog %}
                 <p><a href="{%url 'blog:blog_add'%}">Publier un post</a>
                 {% endif %}
