--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,26 +1,13 @@
 {% extends 'base.html' %}
+{% load blog_extras %}
 {% block content %}
-<h2>Photos</h2>
+<h2>Votre flux</h2>
 <div class="grid-container">
-{% for photo in photos%}
-<div class="POST">
-<img src="{{photo.image.url}}">
-<p>{{photo.caption}}</p>
-</div>
-{%endfor%}
-</div>
-<div>
-    <h2>Post</h2>
-    <div class="grid-container">
-        {% for blog in blogs %}
-        <div class="POST">
-            <a href="{%url 'blog:view_blog' blog.id%}">
-                <h4>Billet : {{blog.title}}</h4>
-                <img src="{{blog.photo.image.url}}">
-            </a>
-            <p>{{blog.photo.caption}}</P>
-        </div>
-
-        {% endfor %}
-    </div>
+    {% for instace in blogs_and_photos %}
+    {% if instace|model_type=='Blog' %}
+    {% include 'blog/partials/blog_snippet.html' with blog=instance %}
+    {% elif instace|model_type=='Photo' %}
+    {% include "blog/partials/photo_snippet.html" %}
+    {% endif %}
+    {% endfor %}
 {% endblock content %}
