--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
                 {% if perms.blog.add_blog %}
                 <p><a href="{%url 'blog:blog_add'%}">Publier un post</a>
                 {% endif %}
+                <p><a href="{%url 'blog:photo_feed'%}">Mes photos</a></p>
                 <p><a href="{% url 'authentication:profil_photo' %}">Changer la photo de profil</a></p>
                 <p><a href="{% url 'authentication:password_change' %}">Changer le mot de passe</a></p>
                 <p><a href="{% url 'authentication:logout' %}">Se déconnecter</a></p>
