--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -3,11 +3,12 @@
 {% block content %}
 <h2>Votre flux</h2>
 <div class="grid-container">
-    {% for instace in blogs_and_photos %}
+    {% for instace in page_obj %}
     {% if instace|model_type=='Blog' %}
     {% include 'blog/partials/blog_snippet.html' with blog=instance %}
     {% elif instace|model_type=='Photo' %}
     {% include "blog/partials/photo_snippet.html" %}
     {% endif %}
     {% endfor %}
+{% include "blog/partials/page_obj_snippet.html" %}
 {% endblock content %}
