--- a/blog/templates/blog/photo_feed.html
+++ b/blog/templates/blog/photo_feed.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 <h2>Votre flux photos</h2>
-{% for instance in photos %}
+{% for instance in page_obj %}
 {% include 'blog/partials/photo_snippet.html' %}
 {% endfor %}
+{% include "blog/partials/page_obj_snippet.html" %}
 {% endblock content %}
